--- a/src/cdcms/templates/Base.html
+++ b/src/cdcms/templates/Base.html
@@ -20,37 +20,32 @@
           <ul class="navbar-nav me-auto">
             {% if current_user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('dashboard_page') }}">Dashboard</a>
+                <a class="nav-link {{ 'active' if request.endpoint == 'dashboard_page' }}" href="{{ url_for('dashboard_page') }}">Dashboard</a>
               </li>
               {% if current_user.is_hospital() %}
                 <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('doctor_signup_page') }}">Add Doctor</a>
+                  <a class="nav-link {{ 'active' if request.endpoint == 'doctor_signup_page' }}" href="{{ url_for('doctor_signup_page') }}">Add Doctor</a>
                 </li>
               {% elif current_user.is_doctor() %}
                 <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('patient_add_page') }}">Add Patient</a>
+                  <a class="nav-link {{ 'active' if request.endpoint == 'patient_add_page' }}" href="{{ url_for('patient_add_page') }}">Add Patient</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Search Disease</a>
+                  <a class="nav-link {{ 'active' if request.endpoint == 'search_disease_page' }}" href="{{ url_for('search_disease_page') }}">Search Disease</a>
                 </li>
               {% endif %}
                 <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('search_cases_page') }}">Search Cases</a>
+                  <a class="nav-link {{ 'active' if request.endpoint == 'search_cases_page' }}" href="{{ url_for('search_cases_page') }}">Search Cases</a>
                 </li>
             {% else %}
-              <li class="nav-item active">
-                <a class="nav-link active" href="{{ url_for('home_page') }}">Home</a>
+              <li class="nav-item">
+                <a class="nav-link {{ 'active' if request.endpoint == 'home_page' }}" href="{{ url_for('home_page') }}">Home</a>
               </li>
             {% endif %}   
           </ul>
 
           {% if current_user.is_authenticated %}
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" style="color:lawngreen; font-weight: bold;" >
-                            {{current_user.prettier_budget}}
-                        </a>
-                    </li>
                     <li class="nav-item"><a class="nav-link" >Welcome, {{current_user.username}}</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('logout_page') }}">Logout</a></li>
                 </ul>
