--- a/src/cdcms/templates/Base.html
+++ b/src/cdcms/templates/Base.html
@@ -10,7 +10,7 @@
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
-  <body style="background-image: linear-gradient(to right, #ffffff, #90EE90);">
+  <body style="background-image: linear-gradient(to right, #ADD8E6, #90EE90);">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-2">
         <a class="navbar-brand" href="#">CDCMS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
